--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -12,113 +12,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import torch.nn.functional as F\n",
+    "from bundle.DataCraft import * \n",
+    "from bundle.ApiCraft  import * \n",
+    "\n",
+    "\n",
+    "# --- Configuration ---\n",
+    "model_path = \"../../model/api/char_predictor.pth\"           # Input: Pretrained NLP model path\n",
+    "characters_eeg_filepath = \"../../data/characters_eeg.pkl\"\n",
+    "sentences_filepath = \"../../data/sentences.txt\"             # Input: Sentences file\n",
+    "output_filepath = \"../../data/sentences_eeg.pkl\"            # Output: Combined data"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-06-08T05:23:41.122152Z",
+     "start_time": "2025-06-08T05:23:38.341462Z"
+    }
+   },
+   "id": "189d752f13e679c2"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# NL Predictor Model Definition \n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e70acac7736264d4"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary size: 62\n"
+      "Warning: Characters file not found at ../data/characters.txt. Using default character set.\n",
+      "Vocabulary size: 37\n",
+      "Characters in vocabulary: ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_ \n"
      ]
     }
    ],
    "source": [
-    "import pickle\n",
-    "import os\n",
-    "import random\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "import string\n",
-    "\n",
-    "\n",
-    "# --- Configuration ---\n",
-    "sample_groups_filepath = \"../../data/sample_groups.pkl\" # Input: Grouped samples\n",
-    "sentences_filepath = \"../../data/sentences.txt\"       # Input: Sentences file\n",
-    "model_path = \"../../model/api/char_predictor.pth\" # Input: Pretrained NLP model path\n",
-    "output_filepath = \"../../data/sentence_eeg_prob_data.pkl\" # Output: Combined data\n",
-    "\n",
-    "# --- Helper Function to Load Sample Groups ---\n",
-    "def load_sample_groups(filepath):\n",
-    "    \"\"\"Loads the grouped samples dictionary from a pickle file.\"\"\"\n",
-    "    print(f\"Attempting to load sample groups from: {filepath}\")\n",
-    "    if not os.path.exists(filepath):\n",
-    "        print(f\"Error: File not found at {filepath}. Please run the grouping script first.\")\n",
-    "        return None\n",
-    "    try:\n",
-    "        with open(filepath, \"rb\") as f:\n",
-    "            loaded_groups = pickle.load(f)\n",
-    "        print(\"Successfully loaded sample groups dictionary.\")\n",
-    "        if not isinstance(loaded_groups, dict):\n",
-    "            print(f\"Error: Loaded object is not a dictionary (type: {type(loaded_groups)}). Returning None.\")\n",
-    "            return None\n",
-    "        # Check if it contains data\n",
-    "        if not any(loaded_groups.values()):\n",
-    "             print(\"Warning: Loaded sample groups dictionary appears empty.\")\n",
-    "        return loaded_groups\n",
-    "    except Exception as e:\n",
-    "        print(f\"An unexpected error occurred during loading sample groups: {e}\")\n",
-    "        return None\n",
-    "\n",
-    "# --- NLP Model Definition and Functions ---\n",
-    "# Add next-char prediction probabilities to each DFM sample as additional feature\n",
-    "# Define character set (a-z, A-Z, 0-9)\n",
-    "all_chars = list(string.ascii_lowercase + string.ascii_uppercase + string.digits)\n",
+    "# Load characters from file\n",
+    "all_chars = load_characters()\n",
     "char2idx = {ch: idx for idx, ch in enumerate(all_chars)}\n",
     "idx2char = {idx: ch for ch, idx in char2idx.items()}\n",
     "vocab_size = len(all_chars)\n",
     "\n",
     "print(\"Vocabulary size:\", vocab_size)\n",
-    "\n",
-    "class CharPredictor(nn.Module):\n",
-    "    def __init__(self, vocab_size, embed_dim=64, hidden_dim=128):\n",
-    "        super(CharPredictor, self).__init__()\n",
-    "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
-    "        self.lstm = nn.LSTM(embed_dim, hidden_dim, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_dim, vocab_size)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        embed = self.embedding(x)\n",
-    "        _, (hidden, _) = self.lstm(embed)\n",
-    "        hidden = hidden.squeeze(0)\n",
-    "        out = self.fc(hidden)\n",
-    "        return out\n",
-    "    \n",
-    "def load_nlp_model(path=\"../../model/api/char_predictor.pth\"):\n",
-    "    model = CharPredictor(vocab_size)\n",
-    "    model.load_state_dict(torch.load(path))\n",
-    "    model.eval()\n",
-    "    print(f\"Model loaded from {path}.\")\n",
-    "    return model\n",
+    "print(\"Characters in vocabulary:\", all_chars)\n",
     "\n",
     "\n",
-    "def predict_next_chars(model, sentence, top_k=5):\n",
+    "def predict_next_chars(model, sentence, top_k=None):\n",
+    " \n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
+    "        # Convert to indices, skipping unknown characters\n",
     "        input_seq = [char2idx[ch] for ch in sentence if ch in char2idx]\n",
     "        if not input_seq:\n",
-    "            raise ValueError(\"Input sentence must contain at least one known character.\")\n",
+    "            print(\"Warning: Input sentence contains no known characters. Using empty sequence.\")\n",
+    "            # Return uniform distribution if no valid input\n",
+    "            result = {ch: 1.0/vocab_size for ch in all_chars}\n",
+    "            return result\n",
     "\n",
     "        input_seq = torch.tensor(input_seq).unsqueeze(0)\n",
     "        output = model(input_seq)\n",
     "        probs = F.softmax(output, dim=-1).squeeze(0)\n",
-    "\n",
-    "        top_probs, top_indices = torch.topk(probs, top_k)\n",
-    "\n",
-    "        result = {}\n",
-    "        for prob, idx in zip(top_probs, top_indices):\n",
-    "            result[idx2char[idx.item()]] = round(prob.item(), 4)\n",
-    "\n",
+    "        \n",
+    "        # If top_k is specified, get only top k predictions\n",
+    "        if top_k is not None:\n",
+    "            top_k = min(top_k, vocab_size)  # Ensure top_k doesn't exceed vocab size\n",
+    "            top_probs, top_indices = torch.topk(probs, top_k)\n",
+    "            \n",
+    "            result = {}\n",
+    "            for prob, idx in zip(top_probs, top_indices):\n",
+    "                result[idx2char[idx.item()]] = round(prob.item(), 4)\n",
+    "        else:\n",
+    "            # Return all probabilities\n",
+    "            result = {}\n",
+    "            for idx, prob in enumerate(probs):\n",
+    "                result[idx2char[idx]] = round(prob.item(), 4)\n",
+    "        \n",
     "        return result"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T18:48:13.611261500Z",
-     "start_time": "2025-06-07T18:48:13.544665Z"
+     "end_time": "2025-06-08T05:23:41.177438300Z",
+     "start_time": "2025-06-08T05:23:41.129147800Z"
     }
    },
-   "id": "189d752f13e679c2"
+   "id": "1271fe52447729d6"
   },
   {
    "cell_type": "markdown",
@@ -132,13 +124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load sample groups from: ../../data/sample_groups.pkl\n",
+      "Attempting to load sample groups from: ../../data/characters_eeg.pkl\n",
       "Successfully loaded sample groups dictionary.\n",
       "Model loaded from ../../model/api/char_predictor.pth.\n",
       "Reading sentences from: ../../data/sentences.txt\n",
@@ -948,47 +940,23 @@
       "\n",
       "Finished processing. Collected data for 15470 character instances.\n",
       "\n",
-      "Saving combined data to: ../../data/sentence_eeg_prob_data.pkl\n",
-      "Successfully saved combined data to ../../data/sentence_eeg_prob_data.pkl.\n",
-      "\n",
-      "Script finished.\n",
-      "Attempting to load processed data from: ../../data/sentence_eeg_prob_data.pkl\n",
-      "Successfully loaded processed data.\n",
-      "Loaded 15470 items.\n",
-      "Example of first item: H\n",
-      "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: 1\n",
-      "Example of first item: [array([[-0.54037046, -1.6272256 , -0.8909307 , ..., -0.36527073,\n",
-      "        -0.45629573, -0.9330822 ],\n",
-      "       [-0.7337005 , -1.8734369 , -1.1107128 , ..., -0.46904737,\n",
-      "        -0.72463924, -1.0288155 ],\n",
-      "       [-0.9022075 , -2.0632687 , -1.289877  , ..., -0.5228547 ,\n",
-      "        -0.94493437, -1.1008296 ],\n",
-      "       ...,\n",
-      "       [-1.4762    , -1.1797712 , -1.7743834 , ..., -1.6437798 ,\n",
-      "        -0.24375428, -1.5941732 ],\n",
-      "       [-1.3776388 , -1.12282   , -1.6979017 , ..., -1.7012546 ,\n",
-      "        -0.3126163 , -1.714043  ],\n",
-      "       [-1.2832029 , -1.011978  , -1.5232986 , ..., -1.697937  ,\n",
-      "        -0.3192157 , -1.7902619 ]], dtype=float32)]\n",
-      "Example of first item: {'h': 0.6865, 'r': 0.0676, 'o': 0.0639, 'a': 0.0576, 'i': 0.0386}\n"
+      "Saving combined data to: ../../data/sentences_eeg.pkl\n",
+      "Successfully saved combined data to ../../data/sentences_eeg.pkl.\n"
      ]
     }
    ],
    "source": [
-    "# --- Main Processing Logic ---\n",
-    "\n",
-    "# 1. Load Sample Groups\n",
-    "sample_groups_data = load_sample_groups(sample_groups_filepath)\n",
+    "# Load Sample Groups for characters\n",
+    "sample_groups_data = load_characters_eeg(characters_eeg_filepath)\n",
     "if not sample_groups_data:\n",
     "    exit()\n",
     "\n",
-    "# 2. Load NLP Model\n",
-    "nlp_model = load_nlp_model(model_path)\n",
+    "# Load NLP Model\n",
+    "nlp_model = load_nlp_model(vocab_size,model_path)\n",
     "if not nlp_model:\n",
     "    exit()\n",
     "\n",
-    "# 3. Read Sentences\n",
+    "# Read Sentences\n",
     "sentences = []\n",
     "print(f\"Reading sentences from: {sentences_filepath}\")\n",
     "try:\n",
@@ -1006,7 +974,7 @@
     "    print(\"No sentences found in the file. Exiting.\")\n",
     "    exit()\n",
     "\n",
-    "# 4. Process Sentences and Combine Data\n",
+    "# Process Sentences and Combine Data\n",
     "processed_data = []\n",
     "print(\"\\nProcessing sentences to combine EEG chunks and probabilities...\")\n",
     "\n",
@@ -1033,6 +1001,7 @@
     "            # Store the combined information\n",
     "            char_data = {\n",
     "                \t\"character\": char,\n",
+    "                    \"sentence\": sentence,\n",
     "                \t\"char_idx_in_sentence\": char_idx,\n",
     "                \t\"eeg_chunk\": selected_chunk, # List of numpy arrays\n",
     "                \t\"next_char_probabilities\": next_char_probs\n",
@@ -1059,48 +1028,68 @@
     "        pickle.dump(processed_data, f)\n",
     "    print(f\"Successfully saved combined data to {output_filepath}.\")\n",
     "except Exception as e:\n",
-    "    print(f\"Error saving combined data: {e}\")\n",
-    "\n",
-    "print(\"\\nScript finished.\")\n",
-    "\n",
-    "# --- Optional: Add a function to load the final data ---\n",
-    "def load_sentence_eeg_prob_data(filepath=output_filepath):\n",
-    "    \"\"\"Loads the final processed data list from a pickle file.\"\"\"\n",
-    "    print(f\"Attempting to load processed data from: {filepath}\")\n",
-    "    if not os.path.exists(filepath):\n",
-    "        print(f\"Error: File not found at {filepath}.\")\n",
-    "        return None\n",
-    "    try:\n",
-    "        with open(filepath, \"rb\") as f:\n",
-    "            data = pickle.load(f)\n",
-    "        print(\"Successfully loaded processed data.\")\n",
-    "        if isinstance(data, list):\n",
-    "            return data\n",
-    "        else:\n",
-    "            print(f\"Error: Loaded object is not a list (type: {type(data)}). Returning None.\")\n",
-    "            return None\n",
-    "    except Exception as e:\n",
-    "        print(f\"An unexpected error occurred during loading processed data: {e}\")\n",
-    "        return None\n",
-    "\n",
+    "    print(f\"Error saving combined data: {e}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-06-08T05:23:56.466345900Z",
+     "start_time": "2025-06-08T05:23:41.161174100Z"
+    }
+   },
+   "id": "fee7df9628f0876a"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
+      "Successfully loaded processed data.\n",
+      "Loaded 15470 items.\n",
+      "Example of first item: H\n",
+      "Example of first item: 1\n",
+      "Example of first item: THE QUICK DOG JUMPED OVER\n",
+      "Example of first item: [array([[ 1.9504154 ,  2.2442322 ,  1.9698964 , ...,  1.4474702 ,\n",
+      "         1.3025287 ,  1.7617115 ],\n",
+      "       [ 1.8555712 ,  2.1287162 ,  1.8950977 , ...,  1.6038033 ,\n",
+      "         1.4954389 ,  1.889984  ],\n",
+      "       [ 1.7028829 ,  1.9374998 ,  1.7584169 , ...,  1.7040414 ,\n",
+      "         1.6331682 ,  1.9601816 ],\n",
+      "       ...,\n",
+      "       [ 0.40570083, -0.01885907,  0.21926583, ..., -0.7260041 ,\n",
+      "        -0.72525847, -0.72926086],\n",
+      "       [ 0.45789889,  0.0929183 ,  0.399929  , ..., -0.6825177 ,\n",
+      "        -0.64262927, -0.7352173 ],\n",
+      "       [ 0.46558765,  0.17591506,  0.5342773 , ..., -0.6526491 ,\n",
+      "        -0.5673434 , -0.75709546]], dtype=float32)]\n",
+      "Example of first item: {'A': 0.0045, 'B': 0.0002, 'C': 0.0006, 'D': 0.0, 'E': 0.0017, 'F': 0.0, 'G': 0.0, 'H': 0.9564, 'I': 0.0094, 'J': 0.0001, 'K': 0.0001, 'L': 0.0, 'M': 0.0, 'N': 0.0, 'O': 0.0034, 'P': 0.0001, 'Q': 0.0, 'R': 0.0012, 'S': 0.0006, 'T': 0.0012, 'U': 0.0025, 'V': 0.0, 'W': 0.0011, 'X': 0.0, 'Y': 0.0005, 'Z': 0.0, '1': 0.0004, '2': 0.0004, '3': 0.0001, '4': 0.0001, '5': 0.0, '6': 0.0, '7': 0.0, '8': 0.0001, '9': 0.0001, '_': 0.0, ' ': 0.0149}\n"
+     ]
+    }
+   ],
+   "source": [
     "# Example usage of the loader:\n",
-    "final_data = load_sentence_eeg_prob_data()\n",
+    "final_data = load_sentence_eeg_prob_data(output_filepath)\n",
     "if final_data:\n",
     "    print(f\"Loaded {len(final_data)} items.\")\n",
     "    if final_data:\n",
     "        print(\"Example of first item:\", final_data[0][\"character\"])\n",
     "        print(\"Example of first item:\", final_data[0][\"char_idx_in_sentence\"])\n",
+    "        print(\"Example of first item:\", final_data[0][\"sentence\"])\n",
     "        print(\"Example of first item:\", final_data[0][\"eeg_chunk\"][0:1])\n",
     "        print(\"Example of first item:\", final_data[0][\"next_char_probabilities\"])\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T18:48:22.833685700Z",
-     "start_time": "2025-06-07T18:48:13.579765900Z"
+     "end_time": "2025-06-08T05:24:50.821310200Z",
+     "start_time": "2025-06-08T05:24:50.592513600Z"
     }
    },
-   "id": "fee7df9628f0876a"
+   "id": "538f0098a7c3aed9"
   }
  ],
  "metadata": {
