--- a/ecd/jupyter/model/probability-api.ipynb
+++ b/ecd/jupyter/model/probability-api.ipynb
@@ -3,16 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# Character Prediction with LSTM - Jupyter Notebook Version"
+    "# Character Prediction with LSTM - Adapted for Project"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "595f47fbbba3ce1f"
+   "id": "465d40dd92ae93f4"
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stderr",
@@ -25,105 +25,97 @@
     }
    ],
    "source": [
-    "# ========================\n",
-    "# 1. Imports\n",
-    "# ========================\n",
-    "import torch\n",
-    "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "import json\n",
-    "import string\n",
-    "\n",
     "import nltk\n",
+    "from bundle.DataCraft import * \n",
+    "from bundle.ApiCraft  import * \n",
+    "\n",
     "nltk.download('gutenberg')\n",
-    "from nltk.corpus import gutenberg\n"
+    "from nltk.corpus import gutenberg"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.843731600Z",
-     "start_time": "2025-06-07T19:13:10.797672500Z"
+     "end_time": "2025-06-08T05:30:04.378539200Z",
+     "start_time": "2025-06-08T05:30:02.123971400Z"
     }
    },
-   "id": "91660077f0ee896f"
+   "id": "3152e8e57ade34ad"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# 1. Characters Setup"
+    "# 1. Characters Setup from characters.txt"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "d64087b17723e7dd"
+   "id": "2ea9a6c40b49c597"
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocabulary size: 62\n"
+      "Loaded 37 characters from ../../data/characters.txt (including added space)\n",
+      "Vocabulary size: 37\n",
+      "Characters in vocabulary: ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_ \n"
      ]
     }
    ],
    "source": [
-    "# Define character set (a-z, A-Z, 0-9)\n",
-    "all_chars = list(string.ascii_lowercase + string.ascii_uppercase + string.digits)\n",
+    "# Load characters from file\n",
+    "all_chars = load_characters()\n",
     "char2idx = {ch: idx for idx, ch in enumerate(all_chars)}\n",
     "idx2char = {idx: ch for ch, idx in char2idx.items()}\n",
     "vocab_size = len(all_chars)\n",
     "\n",
-    "print(\"Vocabulary size:\", vocab_size)"
+    "print(\"Vocabulary size:\", vocab_size)\n",
+    "print(\"Characters in vocabulary:\", all_chars)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.862660500Z",
-     "start_time": "2025-06-07T19:13:10.806718100Z"
+     "end_time": "2025-06-08T05:30:04.462772400Z",
+     "start_time": "2025-06-08T05:30:04.376538400Z"
     }
    },
-   "id": "b440d4865810d2d8"
+   "id": "44a67e096e4c8e69"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# 2. Model Definition"
+    "# 2. Data Cleaning Functions"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "26d545060b458b55"
+   "id": "d7fef3bddeda46cb"
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "outputs": [],
    "source": [
-    "class CharPredictor(nn.Module):\n",
-    "    def __init__(self, vocab_size, embed_dim=64, hidden_dim=128):\n",
-    "        super(CharPredictor, self).__init__()\n",
-    "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
-    "        self.lstm = nn.LSTM(embed_dim, hidden_dim, batch_first=True)\n",
-    "        self.fc = nn.Linear(hidden_dim, vocab_size)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        embed = self.embedding(x)\n",
-    "        _, (hidden, _) = self.lstm(embed)\n",
-    "        hidden = hidden.squeeze(0)\n",
-    "        out = self.fc(hidden)\n",
-    "        return out"
+    "def clean_text(text, allowed_chars):\n",
+    "    # Convert to uppercase\n",
+    "    text = text.upper()\n",
+    "    # Filter to allowed characters\n",
+    "    text = \"\".join(ch for ch in text if ch in allowed_chars)\n",
+    "    return text"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.914890700Z",
-     "start_time": "2025-06-07T19:13:10.815318400Z"
+     "end_time": "2025-06-08T05:30:04.477990600Z",
+     "start_time": "2025-06-08T05:30:04.390387600Z"
     }
    },
-   "id": "97e7f8b1d4fbfb63"
+   "id": "bd0bd64f060ad36d"
   },
   {
    "cell_type": "markdown",
@@ -133,11 +125,11 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "55ea27dfb43f0dd3"
+   "id": "ffad1f272bbaf347"
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "def train_model(model, dataset, epochs=5, seq_len=10, batch_size=64):\n",
@@ -160,8 +152,10 @@
     "                seq = dataset[idx: idx + seq_len]\n",
     "                target = dataset[idx + seq_len]\n",
     "\n",
-    "                inputs.append([char2idx[ch] for ch in seq if ch in char2idx])\n",
-    "                targets.append(char2idx[target])\n",
+    "                # Skip sequences with characters not in our vocabulary\n",
+    "                if all(ch in char2idx for ch in seq) and target in char2idx:\n",
+    "                    inputs.append([char2idx[ch] for ch in seq])\n",
+    "                    targets.append(char2idx[target])\n",
     "\n",
     "            if not inputs:\n",
     "                continue\n",
@@ -178,16 +172,16 @@
     "\n",
     "            total_loss += loss.item()\n",
     "\n",
-    "        print(f\"Epoch {epoch+1}/{epochs}, Loss: {total_loss:.4f}\")"
+    "        print(f\"Epoch {epoch + 1}/{epochs}, Loss: {total_loss:.4f}\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.917894700Z",
-     "start_time": "2025-06-07T19:13:10.824347600Z"
+     "end_time": "2025-06-08T05:30:04.478996500Z",
+     "start_time": "2025-06-08T05:30:04.410486Z"
     }
    },
-   "id": "b6800ba3b4d4a3b"
+   "id": "1029c7c0b135c6c9"
   },
   {
    "cell_type": "markdown",
@@ -197,75 +191,86 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "48e06aceb2d1f90c"
+   "id": "d1c7d1dbeced1657"
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "outputs": [],
    "source": [
-    "def predict_next_chars(model, sentence, top_k=5):\n",
+    "def predict_next_chars(model, sentence, top_k=None):\n",
+    "\n",
+    "    # Clean the input sentence\n",
+    "    sentence = clean_text(sentence, set(all_chars))\n",
+    "    \n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
+    "        # Convert to indices, skipping unknown characters\n",
     "        input_seq = [char2idx[ch] for ch in sentence if ch in char2idx]\n",
     "        if not input_seq:\n",
-    "            raise ValueError(\"Input sentence must contain at least one known character.\")\n",
+    "            print(\"Warning: Input sentence contains no known characters. Using empty sequence.\")\n",
+    "            # Return uniform distribution if no valid input\n",
+    "            result = {ch: 1.0/vocab_size for ch in all_chars}\n",
+    "            return result\n",
     "\n",
     "        input_seq = torch.tensor(input_seq).unsqueeze(0)\n",
     "        output = model(input_seq)\n",
     "        probs = F.softmax(output, dim=-1).squeeze(0)\n",
-    "\n",
-    "        top_probs, top_indices = torch.topk(probs, top_k)\n",
-    "\n",
-    "        result = {}\n",
-    "        for prob, idx in zip(top_probs, top_indices):\n",
-    "            result[idx2char[idx.item()]] = round(prob.item(), 4)\n",
-    "\n",
-    "        return result"
+    "        \n",
+    "        # If top_k is specified, get only top k predictions\n",
+    "        if top_k is not None:\n",
+    "            top_k = min(top_k, vocab_size)  # Ensure top_k doesn't exceed vocab size\n",
+    "            top_probs, top_indices = torch.topk(probs, top_k)\n",
+    "            \n",
+    "            result = {}\n",
+    "            for prob, idx in zip(top_probs, top_indices):\n",
+    "                result[idx2char[idx.item()]] = round(prob.item(), 4)\n",
+    "        else:\n",
+    "            # Return all probabilities\n",
+    "            result = {}\n",
+    "            for idx, prob in enumerate(probs):\n",
+    "                result[idx2char[idx]] = round(prob.item(), 4)\n",
+    "        \n",
+    "        return result\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.917894700Z",
-     "start_time": "2025-06-07T19:13:10.834343600Z"
+     "end_time": "2025-06-08T05:30:04.479989500Z",
+     "start_time": "2025-06-08T05:30:04.424826200Z"
     }
    },
-   "id": "b2b85223ec5412f9"
+   "id": "cc4e3b27ed30df32"
   },
   {
    "cell_type": "markdown",
    "source": [
-    "# 5. Save and Load Model"
+    "# 5. Save Model"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "b3fbdff927d3c541"
+   "id": "932eb1fa93523b7e"
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def save_model(model, path=\"../../model/api/char_predictor.pth\"):\n",
+    "    # Ensure directory exists\n",
+    "    os.makedirs(os.path.dirname(path), exist_ok=True)\n",
     "    torch.save(model.state_dict(), path)\n",
-    "    print(f\"Model saved to {path}.\")\n",
-    "\n",
-    "def load_model(path=\"../../model/api/char_predictor.pth\"):\n",
-    "    model = CharPredictor(vocab_size)\n",
-    "    model.load_state_dict(torch.load(path))\n",
-    "    model.eval()\n",
-    "    print(f\"Model loaded from {path}.\")\n",
-    "    return model\n"
+    "    print(f\"Model saved to {path}.\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.930896200Z",
-     "start_time": "2025-06-07T19:13:10.843731600Z"
+     "end_time": "2025-06-08T05:30:04.480994Z",
+     "start_time": "2025-06-08T05:30:04.436007500Z"
     }
    },
-   "id": "7f482deef27678c4"
+   "id": "34236fbca9178af1"
   },
   {
    "cell_type": "markdown",
@@ -275,43 +280,80 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "a0dcbb1c440b935"
+   "id": "325ba9cb9d3bdf99"
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Model loaded from ../../model/api/char_predictor.pth.\n",
-      "Prediction Probabilities:\n",
+      "\n",
+      "Prediction Probabilities for all characters:\n",
       "{\n",
-      "  \"o\": 0.4151,\n",
-      "  \"I\": 0.0925,\n",
-      "  \"a\": 0.0903,\n",
-      "  \"e\": 0.0778,\n",
-      "  \"O\": 0.0725\n",
+      "  \"D\": 0.4425,\n",
+      "  \"L\": 0.235,\n",
+      "  \"P\": 0.1832,\n",
+      "  \"I\": 0.0519,\n",
+      "  \"O\": 0.0347,\n",
+      "  \"A\": 0.0222,\n",
+      "  \"V\": 0.0083,\n",
+      "  \"E\": 0.0054,\n",
+      "  \"U\": 0.0053,\n",
+      "  \" \": 0.0041,\n",
+      "  \"H\": 0.002,\n",
+      "  \"B\": 0.0007,\n",
+      "  \"S\": 0.0007,\n",
+      "  \"F\": 0.0006,\n",
+      "  \"K\": 0.0006,\n",
+      "  \"W\": 0.0005,\n",
+      "  \"T\": 0.0004,\n",
+      "  \"M\": 0.0003,\n",
+      "  \"N\": 0.0003,\n",
+      "  \"Y\": 0.0003,\n",
+      "  \"C\": 0.0001,\n",
+      "  \"R\": 0.0001,\n",
+      "  \"1\": 0.0001,\n",
+      "  \"2\": 0.0001,\n",
+      "  \"4\": 0.0001,\n",
+      "  \"5\": 0.0001,\n",
+      "  \"9\": 0.0001,\n",
+      "  \"G\": 0.0,\n",
+      "  \"J\": 0.0,\n",
+      "  \"Q\": 0.0,\n",
+      "  \"X\": 0.0,\n",
+      "  \"Z\": 0.0,\n",
+      "  \"3\": 0.0,\n",
+      "  \"6\": 0.0,\n",
+      "  \"7\": 0.0,\n",
+      "  \"8\": 0.0,\n",
+      "  \"_\": 0.0\n",
       "}\n",
-      "Completed sentence: HELo\n"
+      "\n",
+      "Most likely next character: D\n",
+      "Completed sentence: A DARK HAND HELD\n",
+      "\n",
+      "Number of probability outputs: 37\n",
+      "✓ Output matches vocabulary size\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "mode = \"predict\"  # <<< Change to \"predict\" when needed\n",
+    "mode = \"predict\"  # Change to \"predict\" when needed\n",
     "\n",
     "if mode == \"train\":\n",
     "    model = CharPredictor(vocab_size)\n",
     "\n",
-    "    # Load bigger dataset\n",
+    "    # Load dataset\n",
     "    book_ids = [\n",
     "        'austen-emma.txt',\n",
     "        'bible-kjv.txt',\n",
-    "        'blake-poems.txt',\n",
-    "        'melville-moby_dick.txt',\n",
-    "        'shakespeare-macbeth.txt',\n",
+    "#        'blake-poems.txt',\n",
+    "#        'melville-moby_dick.txt',\n",
+    "#        'shakespeare-macbeth.txt',\n",
     "    ]\n",
     "\n",
     "    # Merge all books\n",
@@ -319,10 +361,11 @@
     "    for book_id in book_ids:\n",
     "        text += gutenberg.raw(book_id)\n",
     "\n",
-    "    allowed_chars = set(string.ascii_lowercase + string.ascii_uppercase + string.digits)\n",
-    "    text = \"\".join(ch for ch in text if ch in allowed_chars)\n",
-    "\n",
+    "    # Clean the text according to our requirements\n",
+    "    text = clean_text(text, set(all_chars))\n",
+    "    \n",
     "    print(f\"Training dataset size: {len(text)} characters.\")\n",
+    "    print(f\"Sample of cleaned text: {text[:100]}...\")\n",
     "\n",
     "    # Train the model\n",
     "    train_model(model, text, epochs=10)\n",
@@ -331,32 +374,41 @@
     "    save_model(model)\n",
     "\n",
     "elif mode == \"predict\":\n",
-    "    # ========================\n",
-    "    # 8. Load & Predict\n",
-    "    # ========================\n",
-    "    model = load_model()\n",
-    "    \n",
+    "    model = load_nlp_model(vocab_size)\n",
+    "\n",
     "    # Provide test input\n",
     "    test_sentence = \"A DARK HAND HEL\"\n",
-    "    result = predict_next_chars(model, test_sentence, top_k=5)\n",
+    "    \n",
+    "    # Get all probabilities\n",
+    "    result = predict_next_chars(model, test_sentence)\n",
     "    \n",
     "    # Display result\n",
-    "    print(\"Prediction Probabilities:\")\n",
-    "    print(json.dumps(result, indent=2))\n",
+    "    print(\"\\nPrediction Probabilities for all characters:\")\n",
+    "    # Sort by probability (descending)\n",
+    "    sorted_result = {k: v for k, v in sorted(result.items(), key=lambda item: item[1], reverse=True)}\n",
+    "    print(json.dumps(sorted_result, indent=2))\n",
     "    \n",
     "    # Show most likely completion\n",
     "    best_char = max(result, key=result.get)\n",
     "    completed_sentence = test_sentence + best_char\n",
-    "    print(\"Completed sentence:\", completed_sentence)"
+    "    print(\"\\nMost likely next character:\", best_char)\n",
+    "    print(\"Completed sentence:\", completed_sentence)\n",
+    "    \n",
+    "    # Verify we have exactly the right number of probabilities\n",
+    "    print(f\"\\nNumber of probability outputs: {len(result)}\")\n",
+    "    if len(result) == vocab_size:\n",
+    "        print(\"✓ Output matches vocabulary size\")\n",
+    "    else:\n",
+    "        print(f\"✗ Output size ({len(result)}) does not match vocabulary size ({vocab_size})\")\n"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-07T19:13:10.932401300Z",
-     "start_time": "2025-06-07T19:13:10.861153100Z"
+     "end_time": "2025-06-08T05:30:04.496500500Z",
+     "start_time": "2025-06-08T05:30:04.453315500Z"
     }
    },
-   "id": "87b78372b70d9bb5"
+   "id": "f8ebb4871d36fd25"
   }
  ],
  "metadata": {
