add predictor at sentences

--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "outputs": [],
    "source": [
     "import random\n",
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:23:41.122152Z",
-     "start_time": "2025-06-08T05:23:38.341462Z"
+     "end_time": "2025-06-08T09:53:05.280172400Z",
+     "start_time": "2025-06-08T09:53:05.228636100Z"
     }
    },
    "id": "189d752f13e679c2"
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: Characters file not found at ../data/characters.txt. Using default character set.\n",
+      "Loaded 37 characters from ../../data/characters.txt (including added space)\n",
       "Vocabulary size: 37\n",
       "Characters in vocabulary: ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789_ \n"
      ]
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:23:41.177438300Z",
-     "start_time": "2025-06-08T05:23:41.129147800Z"
+     "end_time": "2025-06-08T09:53:05.320735700Z",
+     "start_time": "2025-06-08T09:53:05.241989800Z"
     }
    },
    "id": "1271fe52447729d6"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
@@ -937,11 +937,11 @@
       "Processing sentence 798/800:YELLOW GOLD DECORATED TOMB\n",
       "Processing sentence 799/800:THE PHARAOH RULED LONG AGO\n",
       "Processing sentence 800/800:A DEEP RIVER CARVED CANYON\n",
+      "Converting probability dictionaries to (78, 2) matrices...\n",
+      "Vocabulary size: 37\n",
+      "Converted 16270 items.\n",
       "\n",
-      "Finished processing. Collected data for 15470 character instances.\n",
-      "\n",
-      "Saving combined data to: ../../data/sentences_eeg.pkl\n",
-      "Successfully saved combined data to ../../data/sentences_eeg.pkl.\n"
+      "Finished processing. Collected data for 16270 character instances.\n"
      ]
     }
    ],
@@ -994,9 +994,10 @@
     "            selected_chunk = random.choice(available_chunks)\n",
     "            \n",
     "            # Predict next character probabilities based on the prefix\n",
-    "            if len(prefix)==0:\n",
-    "                continue\n",
-    "            next_char_probs = predict_next_chars(nlp_model, prefix)\n",
+    "            if len(prefix)!=0:\n",
+    "                next_char_probs = predict_next_chars(nlp_model, prefix)\n",
+    "            else:\n",
+    "                next_char_probs= {ch: 0 for ch in all_chars}  # Uniform distribution if no prefix\n",
     "            \n",
     "            # Store the combined information\n",
     "            char_data = {\n",
@@ -1019,9 +1020,46 @@
     "            #     print(f\"  - Info: Skipping character \t\"{char}\t\" (possibly not in vocab or no EEG data).\")\n",
     "            pass # Silently skip characters without EEG data or not in vocab\n",
     "\n",
-    "print(f\"\\nFinished processing. Collected data for {len(processed_data)} character instances.\")\n",
     "\n",
-    "# 5. Save Processed Data\n",
+    "\n",
+    "processed_data = convert_probabilities_to_78x2(processed_data)\n",
+    "\n",
+    "print(f\"\\nFinished processing. Collected data for {len(processed_data)} character instances.\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-06-08T09:53:14.342974Z",
+     "start_time": "2025-06-08T09:53:05.272431200Z"
+    }
+   },
+   "id": "fee7df9628f0876a"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Save Processed Data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "80782d2769575848"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Saving combined data to: ../../data/sentences_eeg.pkl\n",
+      "Successfully saved combined data to ../../data/sentences_eeg.pkl.\n"
+     ]
+    }
+   ],
+   "source": [
     "print(f\"\\nSaving combined data to: {output_filepath}\")\n",
     "try:\n",
     "    with open(output_filepath, \"wb\") as f:\n",
@@ -1033,15 +1071,25 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:23:56.466345900Z",
-     "start_time": "2025-06-08T05:23:41.161174100Z"
+     "end_time": "2025-06-08T09:53:14.695457700Z",
+     "start_time": "2025-06-08T09:53:14.342974Z"
     }
    },
-   "id": "fee7df9628f0876a"
+   "id": "35f7cccb37f237b4"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Load Processed Data"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "23a89401f27f2667"
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -1049,47 +1097,128 @@
      "text": [
       "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
       "Successfully loaded processed data.\n",
-      "Loaded 15470 items.\n",
+      "Loaded 16270 items.\n",
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[ 1.9504154 ,  2.2442322 ,  1.9698964 , ...,  1.4474702 ,\n",
-      "         1.3025287 ,  1.7617115 ],\n",
-      "       [ 1.8555712 ,  2.1287162 ,  1.8950977 , ...,  1.6038033 ,\n",
-      "         1.4954389 ,  1.889984  ],\n",
-      "       [ 1.7028829 ,  1.9374998 ,  1.7584169 , ...,  1.7040414 ,\n",
-      "         1.6331682 ,  1.9601816 ],\n",
+      "Example of first item: [array([[-2.042544  , -0.6426774 ,  0.10181686, ..., -1.2080004 ,\n",
+      "        -0.07410982, -0.5174353 ],\n",
+      "       [-1.5926721 , -0.39685383,  0.26532504, ..., -0.6071886 ,\n",
+      "         0.17903064, -0.19450329],\n",
+      "       [-1.1295618 , -0.13941687,  0.43846393, ..., -0.02647058,\n",
+      "         0.4743725 ,  0.16327581],\n",
       "       ...,\n",
-      "       [ 0.40570083, -0.01885907,  0.21926583, ..., -0.7260041 ,\n",
-      "        -0.72525847, -0.72926086],\n",
-      "       [ 0.45789889,  0.0929183 ,  0.399929  , ..., -0.6825177 ,\n",
-      "        -0.64262927, -0.7352173 ],\n",
-      "       [ 0.46558765,  0.17591506,  0.5342773 , ..., -0.6526491 ,\n",
-      "        -0.5673434 , -0.75709546]], dtype=float32)]\n",
-      "Example of first item: {'A': 0.0045, 'B': 0.0002, 'C': 0.0006, 'D': 0.0, 'E': 0.0017, 'F': 0.0, 'G': 0.0, 'H': 0.9564, 'I': 0.0094, 'J': 0.0001, 'K': 0.0001, 'L': 0.0, 'M': 0.0, 'N': 0.0, 'O': 0.0034, 'P': 0.0001, 'Q': 0.0, 'R': 0.0012, 'S': 0.0006, 'T': 0.0012, 'U': 0.0025, 'V': 0.0, 'W': 0.0011, 'X': 0.0, 'Y': 0.0005, 'Z': 0.0, '1': 0.0004, '2': 0.0004, '3': 0.0001, '4': 0.0001, '5': 0.0, '6': 0.0, '7': 0.0, '8': 0.0001, '9': 0.0001, '_': 0.0, ' ': 0.0149}\n"
+      "       [-0.17774293,  0.07454094, -0.28601325, ..., -0.01124892,\n",
+      "        -0.11089705,  0.35440558],\n",
+      "       [ 0.17681588,  0.4533532 ,  0.10993246, ...,  0.5125489 ,\n",
+      "         0.10027732,  1.0042441 ],\n",
+      "       [ 0.62014157,  0.9117376 ,  0.64361393, ...,  1.2282215 ,\n",
+      "         0.4401919 ,  1.7872756 ]], dtype=float32)]\n",
+      "Example of first item: [[1.490e-02 1.490e-02]\n",
+      " [4.000e-04 4.000e-04]\n",
+      " [4.000e-04 4.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [4.500e-03 4.500e-03]\n",
+      " [2.000e-04 2.000e-04]\n",
+      " [6.000e-04 6.000e-04]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.700e-03 1.700e-03]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [9.564e-01 9.564e-01]\n",
+      " [9.400e-03 9.400e-03]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [3.400e-03 3.400e-03]\n",
+      " [1.000e-04 1.000e-04]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.200e-03 1.200e-03]\n",
+      " [6.000e-04 6.000e-04]\n",
+      " [1.200e-03 1.200e-03]\n",
+      " [2.500e-03 2.500e-03]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [1.100e-03 1.100e-03]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [5.000e-04 5.000e-04]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]\n",
+      " [0.000e+00 0.000e+00]]\n"
      ]
     }
    ],
    "source": [
-    "# Example usage of the loader:\n",
     "final_data = load_sentence_eeg_prob_data(output_filepath)\n",
+    "\n",
     "if final_data:\n",
+    "    # Convert probabilities to (78, 2) matrices and add to each item    \n",
+    "    # Print example of converted item\n",
     "    print(f\"Loaded {len(final_data)} items.\")\n",
     "    if final_data:\n",
-    "        print(\"Example of first item:\", final_data[0][\"character\"])\n",
-    "        print(\"Example of first item:\", final_data[0][\"char_idx_in_sentence\"])\n",
-    "        print(\"Example of first item:\", final_data[0][\"sentence\"])\n",
-    "        print(\"Example of first item:\", final_data[0][\"eeg_chunk\"][0:1])\n",
-    "        print(\"Example of first item:\", final_data[0][\"next_char_probabilities\"])\n"
+    "        print(\"Example of first item:\", final_data[1][\"character\"])\n",
+    "        print(\"Example of first item:\", final_data[1][\"char_idx_in_sentence\"])\n",
+    "        print(\"Example of first item:\", final_data[1][\"sentence\"])\n",
+    "        print(\"Example of first item:\", final_data[1][\"eeg_chunk\"][0:1])\n",
+    "        print(\"Example of first item:\", final_data[1][\"prob_chunk\"])\n",
+    "else:\n",
+    "    print(\"Failed to load data. Please check the file path.\")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:24:50.821310200Z",
-     "start_time": "2025-06-08T05:24:50.592513600Z"
+     "end_time": "2025-06-08T09:53:14.942425400Z",
+     "start_time": "2025-06-08T09:53:14.695457700Z"
     }
    },
-   "id": "538f0098a7c3aed9"
+   "id": "5e44c00fca7cb60f"
   }
  ],
  "metadata": {
