--- a/ecd/jupyter/data_processing/visualizations.ipynb
+++ b/ecd/jupyter/data_processing/visualizations.ipynb
@@ -12,34 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import os\n",
-    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "from bundle.DataCraft import * \n",
     "\n",
     "\n",
-    "def load_sentence_eeg_prob_data(filepath=\"../../data/sentence_eeg_prob_data.pkl\"):\n",
-    "    \"\"\"Loads the final processed data list from a pickle file.\"\"\"\n",
-    "    print(f\"Attempting to load processed data from: {filepath}\")\n",
-    "    if not os.path.exists(filepath):\n",
-    "        print(f\"Error: File not found at {filepath}.\")\n",
-    "        return None\n",
-    "    try:\n",
-    "        with open(filepath, \"rb\") as f:\n",
-    "            data = pickle.load(f)\n",
-    "        print(\"Successfully loaded processed data.\")\n",
-    "        if isinstance(data, list):\n",
-    "            return data\n",
-    "        else:\n",
-    "            print(f\"Error: Loaded object is not a list (type: {type(data)}). Returning None.\")\n",
-    "            return None\n",
-    "    except Exception as e:\n",
-    "        print(f\"An unexpected error occurred during loading processed data: {e}\")\n",
-    "        return None\n",
     "\n",
     "def create_visualizations(data, output_dir=\"../../visualizations\"):\n",
     "    \"\"\"Creates and saves various visualizations of the data structure.\"\"\"\n",
@@ -54,7 +34,13 @@
     "    \n",
     "    \n",
     "    # EEG Sample Heatmap\n",
-    "    sample_item = next((item for item in data if 'eeg_chunk' in item and item['eeg_chunk']), None)\n",
+    "    for idx, item in enumerate(data):\n",
+    "        if 'eeg_chunk' in item and item['eeg_chunk']:\n",
+    "            sample_item = data[idx + 1] if idx + 1 < len(data) else None\n",
+    "            break\n",
+    "    else:\n",
+    "        sample_item = None \n",
+    "\n",
     "    if sample_item and sample_item['eeg_chunk']:\n",
     "        # Get the first sample from the chunk\n",
     "        sample = sample_item['eeg_chunk'][0]\n",
@@ -84,8 +70,28 @@
     "        plt.savefig(f\"{output_dir}/eeg_sample_lineplot.png\")\n",
     "        plt.close()\n",
     "        print(\"EEG sample line plot saved\")\n",
+    "        \n",
+    "\n",
     "    \n",
+    "    # Plot the probability matrix columns as line plots\n",
+    "    plt.figure(figsize=(14, 8))\n",
+    "    num_column_to_plot = 2  # Plot both columns\n",
     "    \n",
+    "    # Access the converted_data from the sample item\n",
+    "    prob_chunk = sample_item['prob_chunk']\n",
+    "    \n",
+    "    for i in range(num_column_to_plot):\n",
+    "        plt.plot(prob_chunk[:, i], label=f'Column {i+1}')\n",
+    "    \n",
+    "    plt.title(f\"Probability Values for Character '{sample_item['character']}'\", fontsize=16)\n",
+    "    plt.xlabel('Row Index (0-77)', fontsize=14)\n",
+    "    plt.ylabel('Probability', fontsize=14)\n",
+    "    plt.legend()\n",
+    "    plt.grid(True, linestyle='--', alpha=0.7)\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(f\"{output_dir}/prob_sample_lineplot.png\")\n",
+    "    plt.close()\n",
+    "    print(\"Probability matrix line plot saved\")\n",
     "    \n",
     "    # Collect key statistics\n",
     "    total_items = len(data)\n",
@@ -119,8 +125,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T04:40:21.829918Z",
-     "start_time": "2025-06-08T04:40:21.725698400Z"
+     "end_time": "2025-06-08T09:57:53.945341100Z",
+     "start_time": "2025-06-08T09:57:53.906492900Z"
     }
    },
    "id": "b0a3bddf2668f1b6"
@@ -137,21 +143,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Attempting to load processed data from: ../../data/sentence_eeg_prob_data.pkl\n",
+      "Attempting to load processed data from: ../../data/sentences_eeg.pkl\n",
       "Successfully loaded processed data.\n",
       "Generating visualizations in ../../visualizations...\n",
       "EEG sample heatmap saved\n",
       "EEG sample line plot saved\n",
+      "Probability matrix line plot saved\n",
       "Data summary:DATA SHAPE SUMMARY\n",
       "==================\n",
       "\n",
-      "Total Items: 15470\n",
+      "Total Items: 16270\n",
       "Unique Sentences: 552\n",
       "Avg. Sentence Length: 24.32 chars\n",
       "EEG Sample Shape: 78 × 64\n",
@@ -168,12 +175,8 @@
     "# Try to load from the default path first\n",
     "data = load_sentence_eeg_prob_data()\n",
     "\n",
-    "# If that fails, try the path in the current directory\n",
-    "if data is None:\n",
-    "    data = load_sentence_eeg_prob_data(\"sentence_eeg_prob_data.pkl\")\n",
     "\n",
     "if data:\n",
-    "    # Create visualizations\n",
     "    output_dir = create_visualizations(data)\n",
     "    print(f\"\\nTo view the visualizations, check the files in the {output_dir} directory.\")\n",
     "else:\n",
@@ -182,8 +185,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T04:40:23.027544400Z",
-     "start_time": "2025-06-08T04:40:21.834126400Z"
+     "end_time": "2025-06-08T09:57:55.859560700Z",
+     "start_time": "2025-06-08T09:57:53.921467800Z"
     }
    },
    "id": "723be49fdf1891c0"
