--- a/ecd/jupyter/data_processing/extract_sentence_data.ipynb
+++ b/ecd/jupyter/data_processing/extract_sentence_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "import random\n",
@@ -30,8 +30,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T09:53:05.280172400Z",
-     "start_time": "2025-06-08T09:53:05.228636100Z"
+     "end_time": "2025-06-08T10:11:33.866432600Z",
+     "start_time": "2025-06-08T10:11:33.830808100Z"
     }
    },
    "id": "189d752f13e679c2"
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T09:53:05.320735700Z",
-     "start_time": "2025-06-08T09:53:05.241989800Z"
+     "end_time": "2025-06-08T10:11:33.914123300Z",
+     "start_time": "2025-06-08T10:11:33.850422700Z"
     }
    },
    "id": "1271fe52447729d6"
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 31,
    "outputs": [
     {
      "name": "stdout",
@@ -1029,8 +1029,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T09:53:14.342974Z",
-     "start_time": "2025-06-08T09:53:05.272431200Z"
+     "end_time": "2025-06-08T10:11:43.729378700Z",
+     "start_time": "2025-06-08T10:11:33.882207700Z"
     }
    },
    "id": "fee7df9628f0876a"
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 32,
    "outputs": [
     {
      "name": "stdout",
@@ -1071,8 +1071,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T09:53:14.695457700Z",
-     "start_time": "2025-06-08T09:53:14.342974Z"
+     "end_time": "2025-06-08T10:11:44.029085Z",
+     "start_time": "2025-06-08T10:11:43.717591700Z"
     }
    },
    "id": "35f7cccb37f237b4"
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -1101,19 +1101,19 @@
       "Example of first item: H\n",
       "Example of first item: 1\n",
       "Example of first item: THE QUICK DOG JUMPED OVER\n",
-      "Example of first item: [array([[-2.042544  , -0.6426774 ,  0.10181686, ..., -1.2080004 ,\n",
-      "        -0.07410982, -0.5174353 ],\n",
-      "       [-1.5926721 , -0.39685383,  0.26532504, ..., -0.6071886 ,\n",
-      "         0.17903064, -0.19450329],\n",
-      "       [-1.1295618 , -0.13941687,  0.43846393, ..., -0.02647058,\n",
-      "         0.4743725 ,  0.16327581],\n",
+      "Example of first item: [array([[ 0.22776094,  0.46970123,  0.70324725, ...,  0.14635862,\n",
+      "         1.0238168 , -0.9463383 ],\n",
+      "       [ 0.08742154,  0.2278345 ,  0.34740365, ..., -0.1466554 ,\n",
+      "         0.61614096, -1.0300957 ],\n",
+      "       [-0.06776999, -0.04082734, -0.06774805, ..., -0.3656779 ,\n",
+      "         0.22884615, -1.0415238 ],\n",
       "       ...,\n",
-      "       [-0.17774293,  0.07454094, -0.28601325, ..., -0.01124892,\n",
-      "        -0.11089705,  0.35440558],\n",
-      "       [ 0.17681588,  0.4533532 ,  0.10993246, ...,  0.5125489 ,\n",
-      "         0.10027732,  1.0042441 ],\n",
-      "       [ 0.62014157,  0.9117376 ,  0.64361393, ...,  1.2282215 ,\n",
-      "         0.4401919 ,  1.7872756 ]], dtype=float32)]\n",
+      "       [-1.3213954 , -0.93309444, -0.07610805, ..., -0.46508783,\n",
+      "        -0.98153764,  0.23164782],\n",
+      "       [-1.4564943 , -1.0470396 , -0.07786182, ..., -0.53110176,\n",
+      "        -1.0577328 ,  0.05647672],\n",
+      "       [-1.6199298 , -1.1973821 , -0.17433581, ..., -0.52290905,\n",
+      "        -1.0656656 , -0.04597962]], dtype=float32)]\n",
       "Example of first item: [[1.490e-02 1.490e-02]\n",
       " [4.000e-04 4.000e-04]\n",
       " [4.000e-04 4.000e-04]\n",
@@ -1199,7 +1199,6 @@
     "final_data = load_sentence_eeg_prob_data(output_filepath)\n",
     "\n",
     "if final_data:\n",
-    "    # Convert probabilities to (78, 2) matrices and add to each item    \n",
     "    # Print example of converted item\n",
     "    print(f\"Loaded {len(final_data)} items.\")\n",
     "    if final_data:\n",
@@ -1214,8 +1213,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T09:53:14.942425400Z",
-     "start_time": "2025-06-08T09:53:14.695457700Z"
+     "end_time": "2025-06-08T10:11:44.374841300Z",
+     "start_time": "2025-06-08T10:11:44.033620100Z"
     }
    },
    "id": "5e44c00fca7cb60f"
