add predictor at sentences

--- a/ecd/jupyter/model/probability-api.ipynb
+++ b/ecd/jupyter/model/probability-api.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "outputs": [
     {
      "name": "stderr",
@@ -37,8 +37,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.378539200Z",
-     "start_time": "2025-06-08T05:30:02.123971400Z"
+     "end_time": "2025-06-08T11:13:25.707546800Z",
+     "start_time": "2025-06-08T11:13:25.666351800Z"
     }
    },
    "id": "3152e8e57ade34ad"
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "outputs": [
     {
      "name": "stdout",
@@ -80,8 +80,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.462772400Z",
-     "start_time": "2025-06-08T05:30:04.376538400Z"
+     "end_time": "2025-06-08T11:13:25.792512500Z",
+     "start_time": "2025-06-08T11:13:25.677559100Z"
     }
    },
    "id": "44a67e096e4c8e69"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def clean_text(text, allowed_chars):\n",
@@ -111,8 +111,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.477990600Z",
-     "start_time": "2025-06-08T05:30:04.390387600Z"
+     "end_time": "2025-06-08T11:13:25.794511900Z",
+     "start_time": "2025-06-08T11:13:25.684537400Z"
     }
    },
    "id": "bd0bd64f060ad36d"
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "def train_model(model, dataset, epochs=5, seq_len=10, batch_size=64):\n",
@@ -177,8 +177,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.478996500Z",
-     "start_time": "2025-06-08T05:30:04.410486Z"
+     "end_time": "2025-06-08T11:13:25.796512600Z",
+     "start_time": "2025-06-08T11:13:25.693557800Z"
     }
    },
    "id": "1029c7c0b135c6c9"
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def predict_next_chars(model, sentence, top_k=None):\n",
@@ -236,8 +236,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.479989500Z",
-     "start_time": "2025-06-08T05:30:04.424826200Z"
+     "end_time": "2025-06-08T11:13:25.833505300Z",
+     "start_time": "2025-06-08T11:13:25.706088700Z"
     }
    },
    "id": "cc4e3b27ed30df32"
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def save_model(model, path=\"../../model/api/char_predictor.pth\"):\n",
@@ -266,8 +266,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.480994Z",
-     "start_time": "2025-06-08T05:30:04.436007500Z"
+     "end_time": "2025-06-08T11:13:25.845443200Z",
+     "start_time": "2025-06-08T11:13:25.712560100Z"
     }
    },
    "id": "34236fbca9178af1"
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "outputs": [
     {
      "name": "stdout",
@@ -294,47 +294,47 @@
       "\n",
       "Prediction Probabilities for all characters:\n",
       "{\n",
-      "  \"D\": 0.4425,\n",
-      "  \"L\": 0.235,\n",
-      "  \"P\": 0.1832,\n",
-      "  \"I\": 0.0519,\n",
-      "  \"O\": 0.0347,\n",
-      "  \"A\": 0.0222,\n",
-      "  \"V\": 0.0083,\n",
-      "  \"E\": 0.0054,\n",
-      "  \"U\": 0.0053,\n",
-      "  \" \": 0.0041,\n",
-      "  \"H\": 0.002,\n",
-      "  \"B\": 0.0007,\n",
-      "  \"S\": 0.0007,\n",
-      "  \"F\": 0.0006,\n",
-      "  \"K\": 0.0006,\n",
-      "  \"W\": 0.0005,\n",
-      "  \"T\": 0.0004,\n",
-      "  \"M\": 0.0003,\n",
-      "  \"N\": 0.0003,\n",
-      "  \"Y\": 0.0003,\n",
-      "  \"C\": 0.0001,\n",
-      "  \"R\": 0.0001,\n",
-      "  \"1\": 0.0001,\n",
-      "  \"2\": 0.0001,\n",
-      "  \"4\": 0.0001,\n",
-      "  \"5\": 0.0001,\n",
-      "  \"9\": 0.0001,\n",
+      "  \"T\": 0.4073,\n",
+      "  \"C\": 0.3982,\n",
+      "  \"N\": 0.0865,\n",
+      "  \"R\": 0.0497,\n",
+      "  \"L\": 0.0218,\n",
+      "  \"E\": 0.0153,\n",
+      "  \"K\": 0.0148,\n",
+      "  \"S\": 0.0031,\n",
+      "  \"V\": 0.0015,\n",
+      "  \"D\": 0.0005,\n",
+      "  \"F\": 0.0004,\n",
+      "  \"I\": 0.0004,\n",
+      "  \"A\": 0.0003,\n",
+      "  \"B\": 0.0,\n",
       "  \"G\": 0.0,\n",
+      "  \"H\": 0.0,\n",
       "  \"J\": 0.0,\n",
+      "  \"M\": 0.0,\n",
+      "  \"O\": 0.0,\n",
+      "  \"P\": 0.0,\n",
       "  \"Q\": 0.0,\n",
+      "  \"U\": 0.0,\n",
+      "  \"W\": 0.0,\n",
       "  \"X\": 0.0,\n",
+      "  \"Y\": 0.0,\n",
       "  \"Z\": 0.0,\n",
+      "  \"1\": 0.0,\n",
+      "  \"2\": 0.0,\n",
       "  \"3\": 0.0,\n",
+      "  \"4\": 0.0,\n",
+      "  \"5\": 0.0,\n",
       "  \"6\": 0.0,\n",
       "  \"7\": 0.0,\n",
       "  \"8\": 0.0,\n",
-      "  \"_\": 0.0\n",
+      "  \"9\": 0.0,\n",
+      "  \"_\": 0.0,\n",
+      "  \" \": 0.0\n",
       "}\n",
       "\n",
-      "Most likely next character: D\n",
-      "Completed sentence: A DARK HAND HELD\n",
+      "Most likely next character: T\n",
+      "Completed sentence: THE QUIT\n",
       "\n",
       "Number of probability outputs: 37\n",
       "✓ Output matches vocabulary size\n"
@@ -377,7 +377,7 @@
     "    model = load_nlp_model(vocab_size)\n",
     "\n",
     "    # Provide test input\n",
-    "    test_sentence = \"A DARK HAND HEL\"\n",
+    "    test_sentence = \"THE QUICK\"\n",
     "    \n",
     "    # Get all probabilities\n",
     "    result = predict_next_chars(model, test_sentence)\n",
@@ -404,8 +404,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-06-08T05:30:04.496500500Z",
-     "start_time": "2025-06-08T05:30:04.453315500Z"
+     "end_time": "2025-06-08T11:13:25.857840600Z",
+     "start_time": "2025-06-08T11:13:25.725077300Z"
     }
    },
    "id": "f8ebb4871d36fd25"
